<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">个人阅读助理</string>
    <string name="action_settings">设置</string>
    <string name="book_store">BookStore</string>
    <string name="addbutton">添加</string>
    <string name="store_title">书库</string>
    <string name="search">搜索</string>
    <string name="search_hint">请输入书名</string>
    <string name="scan_add">添加书籍</string>
    <string name="classify">图书分类</string>
	<string name="progress">我的笔记</string>
    <string name="interest">兴趣分析</string>
    <string name="bookname">《书名》</string>
    <string name="endpage">结束页码</string>
    <string name="readtime">阅读时间</string>
	<string name="contenttitle">标题</string>
	<string name="readcontent">阅读随笔</string>
	<string name="all_readtime">1時23分45秒</string>
	<string name="scan_hint">请输入ISBN号</string>
	<string name="ok">确定</string>
	<string name="isbn_hint">输入13位ISBN号</string>
	<string name="cancel">取消</string>
	<string name="bookinfo">图书信息</string>
	<string name="scan">扫描</string>
	<string name="read_start">开始阅读</string>
	<string name="page_start">起始页码:</string>
	<string name="end_reading">停止阅读</string>
	<string name="completed">完成</string>
	<string name="read_note">阅读记录</string>
	<string name="read_shared">笔记分享</string>
	<string name="read_note_view">我的笔记</string>
    
</resources>
