<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#0ae5a0"
    tools:context=".ScanAdd" >

    <TextView
        android:id="@+id/scantext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="33dp"
        android:gravity="center"
        android:text="@string/scan_hint"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/isbn_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/scantext"
        android:layout_below="@+id/scantext"
        android:layout_marginTop="24dp"
        android:background="#ffffff"
        android:ems="10"
        android:inputType="numberSigned"
        android:hint="@string/isbn_hint"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/isbn_num"
        android:layout_below="@+id/isbn_num"
        android:layout_marginTop="50dp"
        android:gravity="center" >

        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

    </LinearLayout>

</RelativeLayout>
