<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/back"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:textSize="40sp"
        android:text="@string/bookname" />
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="25dp"
        android:layout_toLeftOf="@+id/textView1"
        android:text="@string/endpage" />

    
	<EditText 
        android:id="@+id/end_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignRight="@+id/note_content"
        android:background="@color/white"
        android:inputType="number"
        android:ems="10" />
	
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="14dp"
        android:text="@string/contenttitle" />

    <EditText
        android:id="@+id/content_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/end_page"
        android:layout_alignTop="@+id/textView3"
        android:background="@color/white"
        android:inputType=""
        android:ems="10" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="18dp"
        android:text="@string/readcontent" />

    <EditText
        android:id="@+id/note_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/content_ok_btn"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView6"
        android:gravity="top"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:inputType="textMultiLine"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/content_ok_btn"
        android:layout_width="120sp"
        android:layout_height="40sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_selector"
        android:text="@string/completed" />
    
</RelativeLayout>