<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="265sp"
        android:layout_height="188sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/all_readtime" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:inputType="none" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="39dp"
        android:text="@string/page_start"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/readingtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv1"
        android:layout_below="@+id/start_reading"
        android:layout_marginTop="29dp"
        android:singleLine="true"
        android:text="00:00:00"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="33sp" />

    <Button
        android:id="@+id/start_reading"
        android:layout_width="wrap_content"
        android:layout_height="40sp"
        android:layout_below="@+id/tv1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:background="@drawable/button_selector"
        android:text="@string/read_start" />

    <EditText
        android:id="@+id/start_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/start_reading"
        android:layout_alignRight="@+id/imageView1"
        android:background="@color/ailan"
        android:ems="4"
        android:inputType="number"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/endreading"
        android:layout_width="wrap_content"
        android:layout_height="40sp"
        android:layout_alignRight="@+id/start_page"
        android:layout_alignTop="@+id/readingtime"
        android:background="@drawable/button_selector"
        android:text="@string/end_reading" />

</RelativeLayout>