<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BookStore" >

    <ListView
        android:id="@+id/booklist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" 
        android:layout_marginTop="45dp"
        >
    </ListView>

    <TextView
        android:id="@+id/store_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/booklist"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:textSize="14pt"
        android:background="#B1B1B1"
        android:text="@string/store_title" />

    <Button
        android:id="@+id/search_btn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/store_text"
        android:layout_alignParentRight="true"
        android:background="#e1e1e1"
        android:text="@string/search" />

   <EditText 
       	android:id="@+id/temp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:inputType="text" >
   </EditText>
   
   <EditText
       android:id="@+id/inputbook"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBottom="@+id/store_text"
       android:layout_below="@+id/temp"
       android:layout_toLeftOf="@+id/search_btn"
       android:layout_toRightOf="@+id/store_text"
       android:ems="5"
       android:background="#F1F1F1"
       android:hint="@string/search_hint"
       android:inputType="text" >

    </EditText>

</RelativeLayout>
